# components

./: package.json
.github/: CODEOWNERS
goldens/: size-test.yaml
guides/: material-3.md
src/dev-app/stepper/: stepper-demo.html  stepper-demo.ts
src/material-experimental/: config.bzl
src/material-experimental/mdc-button/: BUILD.bazel  _button-base.scss  _button-theme-private.scss  _button-theme.scss  _fab-theme.scss  _icon-button-theme.scss  button-base.ts  button.html  button.scss  fab.scss  icon-button.scss  module.ts
src/material-experimental/mdc-checkbox/: BUILD.bazel  checkbox.html  checkbox.ts  module.ts
src/material-experimental/mdc-chips/: BUILD.bazel  chip-option.html  chip-row.html  chip-row.ts  chip.html  chip.ts  module.ts
src/material-experimental/mdc-list/: BUILD.bazel  list-base.ts  list-option.ts  list.ts  module.ts
src/material-experimental/mdc-menu/: BUILD.bazel  menu-item.html  menu-item.ts  module.ts
src/material-experimental/mdc-radio/: BUILD.bazel  module.ts  radio.html  radio.scss
src/material-experimental/mdc-ripple/: BUILD.bazel  module.ts  public-api.ts  ripple.ts
src/material-experimental/mdc-slide-toggle/: BUILD.bazel  module.ts  slide-toggle.html
src/material-experimental/mdc-slider/: BUILD.bazel  _slider-theme.scss  module.ts  slider-thumb.html  slider-thumb.scss  slider.html  slider.ts
src/material-experimental/mdc-tabs/: BUILD.bazel  module.ts  tab-group.html  tab-header.html
src/material/core/: _core.scss
src/material/schematics/: BUILD.bazel  collection.json
src/material/stepper/: BUILD.bazel  step.html  (+5 more)
(+19 files in other folders)
